# rgbd2pointcloud

./: CMakeLists.txt  README.md  package.xml
config/: pointcloud_visualisation.rviz
launch/: rgbd2pointcloud_from_data.launch  rgbd2pointcloud_from_topic.launch
src/: rgbd2pointcloud_from_data.cpp  rgbd2pointcloud_from_topic.cpp
